	12033,Sunshine_Box: should allow seeing cloaked or hidden enemy
	4198,Maya_Purple_Card: intravision not working atm
	4296,Cramp_Card: Temporal Plug: 10z per mob-level on a 3% chance.
	1771,Venom_Knife: For new Asassins skill
		Item type: Throwing Dagger. Has to be equipped as an arrow, is consumed
		like gemstones when the skill is used.
	--
11/06
	* Fixed Marse and Rocker cards missing effects [MasterOfMuppets]
	* Updated item_db2.txt (new format), thanks to Justin84 [Lupus]
11/05
	* Changed some item names for preparing the sign quest [MasterOfMuppets]
	* Reverted Doppelganger's aspd value to 10, it is the correct value [MasterOfMuppets]
	  do not change it again.
	* Updated alot of weapons, thanks to reddozen and vicious_pucca [MasterOfMuppets]
11/04
	* Added the enchant effect to Cursed water [MasterOfMuppets]
	- Changed fake angels droprate of cursed water to 3% and added cursed water to
	  drop from violys at 10%
	* Added Angel wing to old blue boxes and old violet boxes [MasterOfMuppets]
11/03
	* Added slots to Garm's claw, hard covered book and wool cap, thanks to Gyunwoo23
	- Made shoes unequipable for novices and a small update for the skill DB.
	* Added Venom Knife requirement to the skill Venom Knife. Still won't check
	  for a Venom Knife to be equipped as arrow, but it will consume it at least.
	  [Skotlex]
	* Made Ki Translation usable on party-mates only (inf2&1024) [Skotlex]
	* Added empty bottles to the Elemental-resist potions recipes, thanks to reddozen [MasterOfMuppets]
10/31
	* More updates to new quest skills. [DracoRPG]
	* Added Elemental-resist Potions recipe, thanks to RockManEXE. [DracoRPG]
	* Added Embryo recipe, updated Homonculus skill tree. [DracoRPG]
	* Many updates about new quest skills. [DracoRPG]
	* Added missing ()s to Sage's Diary script. [DracoRPG]
10/30
	* Updated Venom Knife price -> 50z [Lupus]
	* Updated const.txt to reflect changes in source, thanks to Silent. [DracoRPG]
10/29