@@ -1324,7 +1324,7 @@
 4183,Vagabond_Wolf_Card,Vagabond Wolf Card,6,,10,10,,,,,,,,4,,,,,{ bonus bStr,1; if(isequipped(4029)) bonus bFlee,18; }
 4184,Lava_Golem_Card,Lava Golem Card,6,,10,10,,,,,,,,2,,,,,{ bonus2 bAddRace2,4,30; }
 4185,Rideword_Card,Rideword Card,6,,10,10,,,,,,,,769,,,,,{ bonus bInt,1; if(BaseClass != Job_Acolyte) end; bonus bInt,1; bonus bMdef,1; }
-4186,Raggler_Card,Raggler Card,6,,10,10,,,,,,,,64,,,,,{ bonus bStr,1; bonus bVit,1; if(isequipped(4233,4281,4321,4206)==0) end; bonus bLuk,10; bonus2 bSPDrainValue,2,0; bonus2 bSkillAtk,42,20; if(BaseClass != Job_Merchant) end; bonus2 bAddMonsterDropItem,617,10; bonus bMagicDamageReturn,20; }
+4186,Raggler_Card,Raggler Card,6,,10,10,,,,,,,,64,,,,,{ bonus bStr,1; bonus bVit,1; if(isequipped(4233,4281,4321,4206)==0) end; bonus bLuk,10; bonus2 bSPDrainValue,2,0; bonus2 bSkillAtk,42,20; if(BaseClass != Job_Merchant) end; bonus2 bAddMonsterDropItem,617,-1; bonus bMagicDamageReturn,20; }
 4187,Raydric_Archer_Card,Raydric Archer Card,6,,10,10,,,,,,,,136,,,,,{ bonus3 bAddMonsterDropItem,12030,6,10; }
 4188,Leib_Olmai_Card,Leib Olmai Card,6,,10,10,,,,,,,,769,,,,,{ bonus2 bSubEle,Ele_Fire,10; bonus3 bAddMonsterDropItem,990,2,500; }
 4189,Wraith_Dead_Card,Wraith Dead Card,6,,10,10,,,,,,,,16,,,,,{ bonus2 bAddEffWhenHit,Eff_Curse,2000; }
@@ -1343,8 +1343,8 @@
 4202,Civil_Servant_Card,Civil Servant Card,6,,10,10,,,,,,,,2,,,,,{ bonus2 bAddEle,Ele_Ghost,20; }
 4203,Mutant_Dragonoid_Card,Mutant Dragonoid Card,6,,10,10,,,,,,,,2,,,,,{ bonus bAtk,15; bonus3 bAutoSpell,17,3+7*(getskilllv(17)==10),10; }
 4204,Mini_Demon_Card,Mini Demon Card,6,,10,10,,,,,,,,64,,,,,{ bonus2 bSubRace,RC_Brute,-20; bonus2 bExpAddRace,RC_Brute,10; }
-4205,Mimic_Card,Mimic Card,6,,10,10,,,,,,,,136,,,,,{ bonus2 bAddMonsterDropItem,603,10; }
-4206,Myst_Case_Card,Mystcase Card,6,,10,10,,,,,,,,769,,,,,{ bonus2 bAddMonsterDropItem,644,10; }
+4205,Mimic_Card,Mimic Card,6,,10,10,,,,,,,,136,,,,,{ bonus2 bAddMonsterDropItem,603,-1; }
+4206,Myst_Case_Card,Mystcase Card,6,,10,10,,,,,,,,769,,,,,{ bonus2 bAddMonsterDropItem,644,-1; }
 4207,Mysteltainn_Card,Mysteltainn Card,6,,10,10,,,,,,,,32,,,,,{ bonus2 bSubSize,0,25; bonus bDef,1; }
 4208,Miyabi_Ningyo_Card,Miyabi Ningyo Card,6,,10,10,,,,,,,,64,,,,,{ bonus bMaxSPrate,10; bonus2 bSkillAtk,15,5; }
 4209,Violy_Card,Violy Card,6,,10,10,,,,,,,,136,,,,,{ bonus3 bAutoSpell,318,1+4*(getskilllv(318)==5),10; }
